# github-collection

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  Makefile  README.md  astro.config.mjs  index.html  main.py  package.json  pyproject.toml  search.json  zensical.toml
00/git-ai_git-ai-project/: index.html
AI/AIClient-2-API_justlovemaki/: index.html
AI/Acontext_memodb-io/: index.html
AI/Agent-Kernel_ZJU-LLMs/: index.html
AI/Agent-S_simular-ai/: index.html
AI/Agent-Skills-for-Context-Engineering_muratcankoylan/: index.html
AI/AiToEarn_yikart/: index.html
AI/AionUi_iOfficeAI/: index.html
AI/AntigravityManager_Draculabo/: index.html
_astro/: MobileTableOfContents.astro_astro_type_script_index_0_lang.Srrho4sB.js  Search.astro_astro_type_script_index_0_lang.Dvl6zY0E.js  TableOfContents.astro_astro_type_script_index_0_lang.jUPdj_iQ.js  page.DcUt-W0d.js  ui-core.v-VwhFRe.js
api/: api_ai.py  api_bookmark.py  config.py  github_trending_scraper.py  prompts.py
docs/: dotfiles_hjkl01.md  index.mdx
dotfiles_hjkl01/: index.html
pagefind/: pagefind-entry.json  pagefind.en_12adf14f52.pf_meta  pagefind.en_2a9645c4eb.pf_meta  pagefind.en_3025f8be93.pf_meta  pagefind.en_304fe4ecfa.pf_meta  pagefind.en_30f45ad626.pf_meta  pagefind.en_316a91a83a.pf_meta  pagefind.en_3baf571ca1.pf_meta  pagefind.en_5312d91f74.pf_meta  pagefind.en_5c6659814c.pf_meta  pagefind.en_632ef699a1.pf_meta  pagefind.en_718af671b2.pf_meta  pagefind.en_bf7bab5cfc.pf_meta  pagefind.en_c09b263577.pf_meta  pagefind.en_c5857281ad.pf_meta  pagefind.en_e91cb0218b.pf_meta
(+10771 files in other folders)
