[project]
name = "astro-project"
version = "0.1.0"
description = "Astro project with Python backend"
requires-python = ">=3.12"
dependencies = [
    "crawlee[all]",
    "httpx",
    "dashscope",
    "python-dotenv",
    "loguru",
    "tenacity>=9.1.2",
]

# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"
